--- a/demo/Movieous/app/src/main/AndroidManifest.xml
+++ b/demo/Movieous/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
 
