--- a/demo/Movieous/config/config.gradle
+++ b/demo/Movieous/config/config.gradle
@@ -4,8 +4,9 @@ ext {
             compileSdkVersion: 28,
             minSdkVersion    : 19,
             targetSdkVersion : 28,
-            versionCode      : 215,
-            versionName      : "2.1.5",
+            versionCode      : 216,
+            versionName      : "2.1.6",
+            // fu sdk
             namaSdkVersionCode : 80,
             namaSdkVersionName : "6.4.1-beta4",
             supportCompatV7Version : "28.0.0",
